--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+############################################################################
+#
+# Project .gitignore
+#
+############################################################################
+
+
+
+############################################################################
+#
+# Node .gitignore
+#
+############################################################################
+
 # Logs
 logs
 *.log
