--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{package.json,.*rc,*.yml}]
+[{package.json,package-lock.json,.*rc,*.yml,*.yaml}]
 indent_style = space
 indent_size = 2
 
