Fix typo in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - "src/**/*"
       - "index.html"
-      - "vite.config.j"
+      - "vite.config.js"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
